Refactor : 선생님, 학생 기록 조회 페이지 json형식수정